--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <header>Header</header>
     <h1>Hello Git</h1>
     <p>adding text</p>
+    <footer>copyright ...</footer>
 </body>
 </html>
