ajout de h2 sur la branche fille

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>Header</header>
     <h1>Hello Git</h1>
     <p>adding text</p>
+    <h2> ces modifs sont sur la branche fille</h2>
     <footer>copyright ...</footer>
 </body>
 </html>
