--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Hello Git</h1>
     <p>adding text</p>
     <h2> ces modifs sont sur la branche fille</h2>
+    <h3>2e test modif branche fille</h3>
     <footer>copyright ...</footer>
 </body>
 </html>
